# croque-mort

./: README.md  cabal.project  croque-mort.cabal  flake.nix
.gitea/workflows/: gitea.yml
.github/workflows/: nix.yml
app/: Domain.hs  FileSystem.hs  Main.hs
