cabal-version:       3.0
name:                croque-mort
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          foss@difolco.dev
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Dead simple broken links checker on local HTML folders
description:         Dead simple broken links checker on local HTML folders.
Homepage:            http://github.com/blackheaven/croque-mort

executable croque-mort
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Domain
    FileSystem
  hs-source-dirs: app
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.19 && <5
    , aeson ==2.*
    , bytestring >= 0.10 && <0.13
    , containers >= 0.5 && <1
    , directory == 1.3.*
    , filepath >= 1.3  && <1.6
    , html-entities == 1.1.*
    , optparse-applicative >= 0.17 && <0.20
    , poolboy >= 0.4.1.0 && <0.5
    , scalpel == 0.6.*
    , text == 2.*
  default-language: Haskell2010
